Refactor map/card init workflow

--- a/src/components/station-card/station-card.html
+++ b/src/components/station-card/station-card.html
@@ -1,7 +1,7 @@
 <div class="station-card">
     <!-- Card loader -->
     <div class="content-loader padding" ngHide="stationDetails || isOffline">
-        <ion-spinner icon="android" class="spinner-assertive"></ion-spinner>
+        <ion-spinner color="lipstick"></ion-spinner>
         <p class="text-grey">Chargement en cours...</p>
     </div>
 
