--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,8 +15,58 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+body {
+    font-family: Roboto;
+    font-weight: 400;
+}
+
 .no-scroll {
     .scroll-content {
         overflow-y: hidden;
     }
+}
+
+.content-loader,
+.content-offline {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    svg {
+        width: 50px;
+        height: 50px;
+    }
+
+    p {
+        margin: 0;
+    }
+}
+
+.img-responsive {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.text-small {
+    font-size: 11px !important;
+    line-height: 1 !important;
+}
+
+.text-grey {
+    color: $black-54 !important;
+}
+
+.text-red {
+    color: $lipstick !important;
+}
+
+.text-yellow {
+    color: $mustard !important;
+}
+
+.text-green {
+    color: $greenblue !important;
 }
