--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -63,10 +63,14 @@ body {
     color: $lipstick !important;
 }
 
-.text-yellow {
+.text-orange {
     color: $mustard !important;
 }
 
 .text-green {
     color: $greenblue !important;
+}
+
+.border-right {
+    border-right: solid 1px rgba(0, 0, 0, 0.12);
 }
