--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -34,6 +34,7 @@ body {
     justify-content: center;
     align-items: center;
 
+    ion-spinner,
     svg {
         width: 50px;
         height: 50px;
