--- a/src/components/station-card/station-card.html
+++ b/src/components/station-card/station-card.html
@@ -11,7 +11,7 @@
     <div class="station-card--header">
         <div class="station-fav">
             <button ion-button icon-only clear (click)="toggleFavorite()">
-                <ion-icon mode="md" [color]="isStationFavorite ? 'mustard' : 'grey'" [name]="isStationFavorite ? 'star' : 'star-outline'"></ion-icon>
+                <ion-icon mode="md" [color]="isFavoriteStation ? 'mustard' : 'grey'" [name]="isFavoriteStation ? 'star' : 'star-outline'"></ion-icon>
             </button>
         </div>
 
