--- a/src/components/favorites-button/favorites-button.html
+++ b/src/components/favorites-button/favorites-button.html
@@ -3,9 +3,9 @@
         <ion-icon name="star"></ion-icon>
     </button>
     <ion-fab-list side="top">
-        <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
-        <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
-        <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
-        <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+        <button ion-fab *ngFor="let station of favoriteStations">
+            <ion-icon name="bicycle"></ion-icon>
+            <div class="label">{{ station.name }}</div>
+        </button>
     </ion-fab-list>
 </ion-fab>
