--- a/src/components/station-card/station-card.html
+++ b/src/components/station-card/station-card.html
@@ -1,11 +1,11 @@
 <!-- Card loader -->
-<div class="content-loader padding" *ngIf="!station" [@delayOut]>
-    <ion-spinner color="lipstick" name="crescent"></ion-spinner>
+<div class="content-loader padding" *ngIf="!station">
+    <ion-spinner color="lipstick"></ion-spinner>
     <p class="text-grey" padding-top>Chargement en cours...</p>
 </div>
 
 <!-- Card station details -->
-<div *ngIf="station" [@delayFadeIn]>
+<div *ngIf="station">
 
     <!-- station name, uptime and CB -->
     <div class="station-card--header">
