Close fab menu on station star/unstar

--- a/src/components/favorites-button/favorites-button.html
+++ b/src/components/favorites-button/favorites-button.html
@@ -1,4 +1,4 @@
-<ion-fab bottom right>
+<ion-fab bottom right #fab>
     <button ion-fab color="mustard">
         <ion-icon name="star"></ion-icon>
     </button>
