--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -109,3 +109,9 @@ ion-fab {
         overflow: visible;
     }
 }
+
+// bug fix blackscreen of map on iOS
+// @see https://github.com/driftyco/ionic/issues/7205#issuecomment-230977122
+ion-app._gmaps_cdv_ .nav-decor {
+  background-color: transparent !important;
+}
