Implements sidemenu main fonctions (miss feedback popup)

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu side="right" type="push" [content]="content">
-  <ion-content>
-  TODO
-  </ion-content>
+    <ion-content>
+        <sidemenu></sidemenu>
+    </ion-content>
 </ion-menu>
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
