--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,6 +11,7 @@ $greenblue: #33d699;
 $white: #f5f5f5;
 $black-54: rgba(0, 0, 0, 0.54);
 $black-87: rgba(0, 0, 0, 0.87);
+$light: #fff;
 
 
 // Shared Variables
@@ -21,7 +22,7 @@ $black-87: rgba(0, 0, 0, 0.87);
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
 $text-color:        $black-87;
-$background-color:  #fff;
+$background-color:  $light;
 
 
 // Named Color Variables
@@ -36,7 +37,7 @@ $colors: (
     primary:    $lipstick,
     secondary:  $azure,
     danger:     #f53d3d,
-    light:      #fff,
+    light:      $light,
     dark:       $black-87,
     grey:       $black-54,
     lipstick:   $lipstick,
