--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,8 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+@import '../components/doorbell/doorbell';
+
 body {
     font-family: Roboto;
     font-weight: 400;
