Fix favorites bug due to the v1 on google map plugin (dynamics elements aren't clickable)

--- a/src/components/favorites-button/favorites-button.html
+++ b/src/components/favorites-button/favorites-button.html
@@ -1,5 +1,5 @@
-<ion-fab bottom right #fab>
-    <button ion-fab color="mustard">
+<ion-fab #fab [ngClass]="{'favorites-list-active': isOpened}">
+    <button ion-fab color="mustard" (click)="toggleIsOpened()">
         <ion-icon name="star"></ion-icon>
     </button>
     <ion-fab-list side="top">
