--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,5 @@
 $station-card-height: 154px;
+$favorites-button-margin: $fab-content-margin;
 
 .home-content {
     position: relative;
@@ -10,6 +11,12 @@ $station-card-height: 154px;
         left: 0;
         right: 0;
         bottom: $station-card-height;
+
+        favorites-button {
+            position: absolute;
+            right: $favorites-button-margin;
+            bottom: $favorites-button-margin;
+        }
     }
 
     station-card {
@@ -18,12 +25,5 @@ $station-card-height: 154px;
         right: 0;
         bottom: 0;
         height: $station-card-height;
-    }
-
-    favorites-button {
-        position: absolute;
-        right: 0;
-        // put it just above the station-card component
-        bottom: $station-card-height;
     }
 }
