--- a/src/components/favorites-button/favorites-button.html
+++ b/src/components/favorites-button/favorites-button.html
@@ -1,10 +1,10 @@
 <ion-fab #fab [ngClass]="{'favorites-list-active': isOpened}">
-    <button ion-fab color="mustard" (click)="toggleIsOpened()">
-        <ion-icon name="star"></ion-icon>
+    <button ion-fab color="light" (click)="toggleIsOpened()">
+        <ion-icon name="star" color="mustard"></ion-icon>
     </button>
     <ion-fab-list side="top">
-        <button ion-fab *ngFor="let station of (favoriteStations | async)" (click)="favoriteClick(station)">
-            <ion-icon name="bicycle"></ion-icon>
+        <button ion-fab color="mustard" *ngFor="let station of (favoriteStations | async)" (click)="favoriteClick(station)">
+            <img class="img-responsive" src="assets/img/vliller-button-bike-white.svg">
             <div class="label">{{ station.name }}</div>
         </button>
     </ion-fab-list>
