--- a/src/components/favorites-button/favorites-button.scss
+++ b/src/components/favorites-button/favorites-button.scss
@@ -4,6 +4,7 @@ favorites-button {
         position: relative !important;
         z-index: auto;
 
+        // overlay
         &:before {
             content: '';
             position: absolute;
@@ -12,15 +13,50 @@ favorites-button {
             right: 0;
             bottom: 0;
             border-radius: 50%;
-            background: rgba(255, 255, 255, 0.6);
+            background: rgba(180, 180, 180, 0.5);
             transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 
             // this is where miracle appears!
             transform: scale(1);
         }
 
+        // overlay opened
         &.favorites-list-active:before {
             transform: scale(50);
+        }
+
+        // Add label support on ion-fab
+        .fab {
+            contain: initial;
+
+            &.fab-md-light {
+                color: $mustard;
+            }
+        }
+
+        button {
+            box-shadow: 0 4px 10px #6b6b6b;
+        }
+
+        ion-fab-list button[ion-fab] {
+            text-align: center;
+            overflow: visible;
+
+            div.label {
+                position: absolute;
+                right: 48px;
+                color: $black-87;
+                background: $light;
+                height: 24px;
+                line-height: 16px;
+                padding: 5px 8px;
+                border-radius: 3px;
+                box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.14), 0 4px 5px rgba(0, 0, 0, 0.1);
+            }
+        }
+
+        .button-inner {
+            overflow: visible;
         }
     }
 }
