--- a/src/components/map/map.scss
+++ b/src/components/map/map.scss
@@ -4,4 +4,32 @@ map {
     .map-canvas {
         height: 100%;
     }
+
+    .map-stations-loading {
+        position: absolute;
+        top: 1rem;
+        left: 1rem;
+        font-size: 1.2rem;
+        line-height: 1.2rem;
+        padding: 0.8rem 1rem;
+        color: $light;
+        background: $black-87;
+        border-radius: 3px;
+
+        & * {
+            vertical-align: middle;
+        }
+
+        ion-spinner {
+            width: 1.4rem;
+            height: 1.4rem;
+            margin-right: 0.6rem;
+        }
+
+        &[hidden] {
+            display: block !important;
+            opacity: 0;
+            transition: opacity 500ms;
+        }
+    }
 }
