--- a/src/pages/sidemenu/sidemenu.scss
+++ b/src/pages/sidemenu/sidemenu.scss
@@ -50,6 +50,7 @@
         padding: 0;
         color: $light;
         text-transform: initial;
+        font-size: 1.5rem;
 
         svg, span {
             vertical-align: middle;
@@ -65,6 +66,10 @@
         font-weight: bold;
         letter-spacing: 0.4px;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 0 2px 0 rgba(0, 0, 0, 0.12);
+    }
+
+    .border-bottom {
+        border-bottom: solid 1px rgba(255, 255, 255, 0.7);
     }
 }
 
