Fix menu toggle button size

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,10 @@
 $station-card-height: 154px;
 $favorites-button-margin: $fab-content-margin;
 
+.home-button-menu-toggle {
+    min-width: 32px !important;
+}
+
 .home-content {
     position: relative;
     height: 100%;
