--- a/src/components/station-card/station-card.scss
+++ b/src/components/station-card/station-card.scss
@@ -95,4 +95,8 @@ station-card {
         padding: 16px;
         white-space: normal;
     }
+
+    .border-right {
+        border-right: solid 1px rgba(0, 0, 0, 0.12);
+    }
 }
