Fix last up message with new data format

--- a/src/app/components/home/home.view.html
+++ b/src/app/components/home/home.view.html
@@ -61,7 +61,7 @@
                             <div class="station-name">{{ HomeCtrl.activeStation.name }}</div>
                             <div class="positive station-distance">{{ HomeCtrl.formatDistance() }}</div>
 
-                            <p class="text-small text-grey">à {{ HomeCtrl.activeStation.lastupd | date: 'HH:mm' }}</p>
+                            <p class="text-small text-grey">Il y a {{ HomeCtrl.activeStation.lastupd }}</p>
 
                             <!-- CB -->
                             <div class="station-cb">
