Adds code icon in side menu

--- a/src/app/components/sidemenu/sidemenu.view.html
+++ b/src/app/components/sidemenu/sidemenu.view.html
@@ -31,7 +31,10 @@
 
         <div class="sidemenu-about white-border-bottom">
             <h4>À propos</h4>
-            <button ng-click="SidemenuCtrl.openLink('https://github.com/alexetmanon/vliller')" class="button button-light button-clear">Données &amp; sources</button>
+            <button ng-click="SidemenuCtrl.openLink('https://github.com/alexetmanon/vliller')" class="button button-light button-clear">
+                <!-- code icon -->
+                <svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/></svg><span class="padding-left">Données &amp; sources</span>
+            </button>
         </div>
 
         <footer class="sidemenu-footer">
