--- a/src/components/favorites-button/favorites-button.html
+++ b/src/components/favorites-button/favorites-button.html
@@ -1,6 +1,6 @@
 <ion-fab #fab [ngClass]="{'favorites-list-active': isOpened}">
-    <button ion-fab color="light" (click)="toggleIsOpened()">
-        <ion-icon name="star" color="mustard"></ion-icon>
+    <button ion-fab color="mustard" (click)="toggleIsOpened()">
+        <ion-icon name="star" color="light"></ion-icon>
     </button>
     <ion-fab-list side="top">
         <button ion-fab color="mustard" *ngFor="let station of (favoriteStations | async)" (click)="favoriteClick(station)">
