--- a/src/components/map/map.scss
+++ b/src/components/map/map.scss
@@ -7,23 +7,24 @@ map {
 
     .map-stations-loading {
         position: absolute;
-        top: 1rem;
-        left: 1rem;
-        font-size: 1.2rem;
-        line-height: 1.2rem;
-        padding: 0.8rem 1rem;
+        top: 0;
+        left: 0;
+        right: 0;
+        font-size: 1.5rem;
+        // line-height: 1.4rem;
+        padding: 1.5rem 1.4rem;
         color: $light;
-        background: $black-87;
-        border-radius: 3px;
+        background: $topaz;
+        box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.14), 0 4px 5px rgba(0, 0, 0, 0.1);
 
         & * {
             vertical-align: middle;
         }
 
         ion-spinner {
-            width: 1.4rem;
-            height: 1.4rem;
-            margin-right: 0.6rem;
+            // width: 1.4rem;
+            // height: 1.4rem;
+            margin-right: 1.2rem;
         }
 
         &[hidden] {
