--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -8,6 +8,7 @@ $cranberry: #a40233;
 $azure: #1e97f7;
 $mustard: #d9a601;
 $greenblue: #33d699;
+$topaz: #19d1bf;
 $white: #f5f5f5;
 $black-54: rgba(0, 0, 0, 0.54);
 $black-87: rgba(0, 0, 0, 0.87);
@@ -44,7 +45,8 @@ $colors: (
     cranberry:  $cranberry,
     azure:      $azure,
     mustard:    $mustard,
-    greenblue:  $greenblue
+    greenblue:  $greenblue,
+    topaz:      $topaz
 );
 
 
