Update station card cb icon color

--- a/src/components/station-card/station-card.html
+++ b/src/components/station-card/station-card.html
@@ -23,8 +23,8 @@
             <div>
                 <div class="station-lastup">Il y a {{ station.lastupd }}</div>
                 <div class="station-cb">
-                    <img *ngIf="station.payment === 'AVEC_TPE'" class="img-responsive" src="assets/img/vliller-cb.png">
-                    <img *ngIf="station.payment !== 'AVEC_TPE'" class="img-responsive" src="assets/img/vliller-no-cb.png">
+                    <img *ngIf="station.payment === 'AVEC_TPE'" class="img-responsive" src="assets/img/vliller-cb.svg">
+                    <img *ngIf="station.payment !== 'AVEC_TPE'" class="img-responsive" src="assets/img/vliller-no-cb.svg">
                 </div>
             </div>
         </div>
