--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -36,7 +36,7 @@ $background-color:  $light;
 
 $colors: (
     primary:    $lipstick,
-    secondary:  $azure,
+    secondary:  $topaz,
     danger:     #f53d3d,
     light:      $light,
     dark:       $black-87,
