--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -9,6 +9,7 @@ $azure: #1e97f7;
 $mustard: #d9a601;
 $greenblue: #33d699;
 $topaz: #19d1bf;
+$aetm-blue: #259cc2;
 $white: #f5f5f5;
 $black-54: rgba(0, 0, 0, 0.54);
 $black-87: rgba(0, 0, 0, 0.87);
@@ -46,7 +47,8 @@ $colors: (
     azure:      $azure,
     mustard:    $mustard,
     greenblue:  $greenblue,
-    topaz:      $topaz
+    topaz:      $topaz,
+    aetm-blue:  $aetm-blue
 );
 
 
