--- a/src/components/station-card/station-card.html
+++ b/src/components/station-card/station-card.html
@@ -21,10 +21,12 @@
                 <div class="station-distance">{{ formatedDistance() }}</div>
             </div>
             <div>
-                <div class="station-lastup">Il y a {{ station.lastupd }}</div>
+                <div *ngIf="!isLoaded" class="station-lastup">Actualisation en cours...</div>
+                <div *ngIf="isLoaded" class="station-lastup">Il y a {{ station.lastupd }}</div>
+
                 <div class="station-cb">
-                    <img *ngIf="station.payment === 'AVEC_TPE'" class="img-responsive" src="assets/img/vliller-cb.svg">
-                    <img *ngIf="station.payment !== 'AVEC_TPE'" class="img-responsive" src="assets/img/vliller-no-cb.svg">
+                    <img *ngIf="station.payment === 'AVEC TPE'" class="img-responsive" src="assets/img/vliller-cb.svg">
+                    <img *ngIf="station.payment !== 'AVEC TPE'" class="img-responsive" src="assets/img/vliller-no-cb.svg">
                 </div>
             </div>
         </div>
