--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -80,6 +80,6 @@ ion-app._gmaps_cdv_ .nav-decor {
 
 // bug fix
 // @see https://github.com/driftyco/ionic/issues/7204
-ion-item {
+.item-md {
     padding-left: 0;
 }
