--- a/src/services/feedback-form/feedback-form.scss
+++ b/src/services/feedback-form/feedback-form.scss
@@ -25,11 +25,11 @@
 
     ion-row {
         ion-col:first-child {
-            padding-left: 0;
+            padding-right: 8px;
         }
 
         ion-col:last-child {
-            padding-right: 0;
+            padding-right: 8px;
         }
     }
 }
