Increase button height

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -62,7 +62,7 @@ $colors: (
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
-
+$button-md-height: 4.6rem;
 
 
 
