Improve contribs page design

--- a/src/pages/contribs/contribs.scss
+++ b/src/pages/contribs/contribs.scss
@@ -1,6 +1,4 @@
 .contribs-content {
-    // background-image: linear-gradient(to top, #a71e45, $lipstick 29%, rgba(229, 43, 56, 0.0));
-
     h2 {
         font-size: 2rem;
     }
@@ -22,6 +20,14 @@
     .contribs-contributors {
         .item-md {
             padding-left: 0;
+            background: transparent;
         }
     }
+}
+
+.contribs-bottom-gradient {
+    z-index: -1;
+    height: 170px;
+    margin-top: -170px;
+    background-image: linear-gradient(to top, rgba(167, 30, 69, 0.12), rgba(229, 43, 56, 0.08) 20%, rgba(229, 43, 56, 0));
 }
