--- a/src/components/station-card/station-card.scss
+++ b/src/components/station-card/station-card.scss
@@ -35,16 +35,7 @@ station-card {
         }
     }
 
-    .station-fav {
-        position: relative;
-        margin: -8px 0 -8px -16px;
 
-        .button[icon-only] {
-            height: 100%;
-            margin-top: 0;
-            margin-bottom: 0;
-        }
-    }
 
     .station-infos {
         flex: 1;
@@ -67,16 +58,8 @@ station-card {
     }
 
     .station-distance {
-        color: $azure;
+        color: color($colors, secondary, base);
         font-size: 16px;
-    }
-
-    .station-lastup {
-        display: inline-block;
-        color: $black-54;
-        margin: 0;
-        font-size: 11px;
-        line-height: 1;
     }
 }
 
@@ -98,5 +81,15 @@ station-card {
 
     .border-right {
         border-right: solid 1px rgba(0, 0, 0, 0.12);
+    }
+}
+
+.station-card--footer {
+    .station-lastup {
+        color: $black-54;
+        margin: 0;
+        font-size: 11px;
+        line-height: 1;
+        text-align: center;
     }
 }
