--- a/src/components/favorites-add-icon/favorites-add-icon.scss
+++ b/src/components/favorites-add-icon/favorites-add-icon.scss
@@ -1,10 +1,7 @@
-.station-fav {
-        position: relative;
-        margin: -8px 0 -8px -16px;
+favorites-add-icon {
+    display: block;
 
-        .button[icon-only] {
-            height: 100%;
-            margin-top: 0;
-            margin-bottom: 0;
-        }
+    .button[icon-only] {
+        margin: 0;
     }
+}
